Removing additional unneded files. Synchronising code to cordova samples.

--- a/example/cordova/countly-demo-js/platforms/android/app/src/main/assets/www/index.html
+++ b/example/cordova/countly-demo-js/platforms/android/app/src/main/assets/www/index.html
@@ -110,6 +110,8 @@
         <button onclick="app.updateRemoteConfigForintegerValueOnly()" class="fluid ui button blue">Integer Test</button>
         <button onclick="app.updateRemoteConfigForstringValueOnly()" class="fluid ui button blue">String Test</button>
         <button onclick="app.updateRemoteConfigForjsonValueOnly()" class="fluid ui button blue">JSON Test</button>
+        <button onclick="app.updateRemoteConfigForjsonStringValueOnly()" class="fluid ui button blue">Array String Test</button>
+        <button onclick="app.updateRemoteConfigForjsonNumberValueOnly()" class="fluid ui button blue">Array Number Test</button>
 
         <div class="ui horizontal divider">Remote Config Methods End</div>
         <div class="ui horizontal divider">Other Methods Start</div>
@@ -142,13 +144,13 @@
         return text;
     }
     app.init = function() {
-        Countly.pushTokenType(Countly.messagingMode.PRODUCTION);
+        Countly.pushTokenType(Countly.messagingMode.TEST);
         Countly.setLoggingEnabled();
         Countly.init("https://trinisoft.count.ly", "f0b2ac6919f718a13821575db28c0e2971e05ec5");
         // Countly.eventSendThreshold(1);
     };
     app.initWithID = function(){
-        Countly.pushTokenType(Countly.messagingMode.PRODUCTION);
+        Countly.pushTokenType(Countly.messagingMode.TEST);
         Countly.setLoggingEnabled();
         Countly.init("https://trinisoft.count.ly", "f0b2ac6919f718a13821575db28c0e2971e05ec5", makeid());
         // Countly.eventSendThreshold(1);
@@ -697,6 +699,20 @@
     }
     app.updateRemoteConfigForjsonValueOnly = function(){
         Countly.getRemoteConfigValueForKey("jsonValue", function(r){
+            alert(r)
+        }, function(r){
+            alert(r);
+        });
+    }
+    app.updateRemoteConfigForjsonStringValueOnly = function(){
+        Countly.getRemoteConfigValueForKey("arrayStringValue", function(r){
+            alert(r)
+        }, function(r){
+            alert(r);
+        });
+    }
+    app.updateRemoteConfigForjsonNumberValueOnly = function(){
+        Countly.getRemoteConfigValueForKey("arrayNumberValue", function(r){
             alert(r)
         }, function(r){
             alert(r);
