iOS: Push data to js done now testing

--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
         <div class="ui horizontal divider">Rating Methods End</div>
     </div>
     <script type="text/javascript">
+        document.addEventListener("deviceready", function(){
+            console.log("deviceready");
+            Countly.onNotification(function(theNotification){
+                alert(JSON.stringify(theNotification));
+            });
+        });
     app = {};
     function makeid() {
         var text = "";
