ipAddress added in sample app.

--- a/index.html
+++ b/index.html
@@ -170,10 +170,11 @@
 
     app.setOptionalParametersForInitialization = function() {
         Countly.setOptionalParametersForInitialization({
-            city: "Tampa",
-            country: "US",
-            latitude: "28.006324",
-            longitude: "-82.7166183"
+            "city": "Tampa",
+            "country": "US",
+            "latitude": "28.006324",
+            "longitude": "-82.7166183",
+            "ipAddress": "255.255.255.255"
         });
     };
 
